dodanie linkow obrazkow

--- a/index.html
+++ b/index.html
@@ -21,13 +21,34 @@
 <div id="main-ctnr">
 
 
-    <div id="top-menu"></div>
+    <div id="top-menu">
+
+        <a id="home"></a>
+        <a id="Biography"></a>
+        <a id="Top10"></a>
+        <a id="Pictures"></a>
+        <a id="Events"></a>
+        <a id="Contact"></a>
+        <a id="www"></a>
+
+    </div>
 
     <div id="booking"></div>
 
     <div id="sound-cloud"></div>
 
-    <div id="icons"></div>
+    <div id="rafael"></div>
+
+    <div id="icons">
+
+        <a id="facebook"></a>
+        <a id="Beatport"></a>
+        <a id="Soundcloud"></a>
+        <a id="Pictures"></a>
+        <a id="Events"></a>
+        <a id="Contact"></a>
+        <a id="www"></a>
+    </div>
 
 </div>
     </body>
