--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     </head>
     <body>
 
+
+
 <div id="main-ctnr">
 
+<div id="Tlo"></div>
 
     <div id="top-menu">
 
@@ -35,7 +38,24 @@
 
     <div id="booking"></div>
 
-    <div id="sound-cloud"></div>
+    <div id="sound-cloud">
+        <div id="Minus">
+        <object height="18" width="173%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F60711915&amp;color=090909&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="transparent"></param><embed wmode="transparent" allowscriptaccess="always" height="18" width="100%" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F60711915&amp;color=090909&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></embed></object>
+        </div>
+        <div id="Finding">
+        <object height="18" width="173%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F57342465%3Fsecret_token%3Ds-JDuca&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="transparent"></param><embed wmode="transparent" allowscriptaccess="always" height="18" width="100%" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F57342465%3Fsecret_token%3Ds-JDuca&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></embed></object>
+        </div>
+        <div id="Penaut">
+            <object height="18" width="173%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F55169874&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="transparent"></param><embed wmode="transparent" allowscriptaccess="always" height="18" width="100%" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F55169874&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></embed></object>
+    </div>
+        <div id="Akat">
+        <object height="18" width="173%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F43159406&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="transparent"></param><embed wmode="transparent" allowscriptaccess="always" height="18" width="100%" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F43159406&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></embed></object>
+        </div>
+        <div id="Othervise">
+        <object height="18" width="173%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F40429975&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="transparent"></param><embed wmode="transparent" allowscriptaccess="always" height="18" width="100%" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F40429975&amp;color=090808&amp;auto_play=false&amp;player_type=tiny&amp;font=Verdana"></embed></object>
+        </div>
+        </div>
+
 
     <div id="rafael"></div>
 
@@ -44,12 +64,17 @@
         <a id="facebook"></a>
         <a id="Beatport"></a>
         <a id="Soundcloud"></a>
-        <a id="Pictures"></a>
-        <a id="Events"></a>
-        <a id="Contact"></a>
-        <a id="www"></a>
+        <a id="Mixcloud"></a>
+        <a id="Twitter"></a>
+        <a id="Myspace"></a>
+        <a id="Youtube"></a>
+        <a id="Gplus"></a>
+        <a id="thumblr"></a>
+        <a id="gmail"></a>
+        <a id="skype"></a>
     </div>
 
 </div>
     </body>
+
 </html>
